# gate

./: Cargo.toml  README.md
example/: .gitignore  Cargo.toml  README.md  build.rs
example/src/: main.rs
gate/: Cargo.toml
gate/src/: app_clock.rs  app_context.rs  app_info.rs  asset_id.rs  audio.rs  core.rs  input.rs  lib.rs  macros.rs
gate/src/core/: mod.rs
gate/src/core/sdl/: app_clock.rs  core_audio.rs  event_handler.rs  mod.rs  sdl_helpers.rs  sdl_imports.rs
gate/src/core/wasm/: mod.rs  wasm_exports.rs  wasm_imports.rs
gate/src/renderer/: atlas.rs  geom.rs  macros.rs  mod.rs  render_buffer.rs  renderer.rs  vbo_packer.rs
gate/src/renderer/core/: mod.rs  shader_util.rs  sprite_program.rs  sprite_renderer.rs  tiled.vert  tiled_program.rs  tiled_renderer.rs
gate/src/renderer/core_renderer/: mod.rs  shader_util.rs  sprite.frag  sprite_program.rs  tiled.frag  wasm.rs
gate/src/renderer/core_renderer/sdl/: from_tiled_program.rs  mod.rs  shader_util.rs  sprite_program.rs  tiled_program.rs
gate/src/renderer/sdl_core_renderer/: mod.rs  sprite.vert  tiled_program.rs
gate/src/renderer/shaders/: from_tiled.frag  from_tiled.vert  mod.rs  sprite.frag  sprite.vert  tiled.frag  tiled.vert
gate/src/sdl_core/: event_handler.rs  mod.rs
gate_build/: Cargo.toml
gate_build/src/: asset_id.template.rs  asset_id_0.template.rs  asset_id_u16.template.rs  asset_id_u8.template.rs  asset_packer.rs  atlas.rs  lib.rs
gate_build/src/html/: gate.js  index.html  mod.rs
gate_build/src/rect_packer/: bit_grid.rs  mod.rs
html/: README.md  gate.js  index.html  sprite.frag  sprite.vert  tiled.frag  tiled.vert
