# Note: the Gate dependencies below specify a relative path, but in practice
# you should use the latest version on crates.io

[package]
name = "example"
version = "0.1.0"
edition = "2018"
authors = ["Matthew Michelotti <matthew@matthewmichelotti.com>"]

[dependencies]
gate = { path = "../gate" }
gl = "0.10.0"

[build-dependencies]
gate_build = { path = "../gate_build" }

#Could also add "bundled", "static-link"
[dependencies.sdl2]
version = "0.31.0"
default-features = false
features = ["use_mac_framework","image","mixer"]

