# Note: the Gate dependencies below specify a relative path, but in practice
# you should use the latest version on crates.io

[package]
name = "example"
version = "0.1.0"
edition = "2018"
authors = ["Matthew Michelotti <matthew@matthewmichelotti.com>"]
publish = false

[dependencies]
gate = { path = "../gate" }

[build-dependencies]
gate_build = { path = "../gate_build" }
