[package]
name = "gate"
version = "0.5.0"
authors = ["Matthew Michelotti <matthew@matthewmichelotti.com>"]
description = "A specialized 2D game library"
documentation = "https://docs.rs/gate/"
repository = "https://github.com/SergiusIW/gate"
readme = "README.md"
keywords = ["2D", "game"]
license = "Apache-2.0"

[dependencies]
byteorder = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.6.1"
sdl2 = { version = "0.29", default-features = false, features = ["image", "mixer"] }
