[package]
name = "gate"
version = "0.6.3"
edition = "2018"
authors = ["Matthew Michelotti <matthew@matthewmichelotti.com>"]
description = "A specialized 2D game library"
documentation = "https://docs.rs/gate/"
repository = "https://github.com/SergiusIW/gate"
readme = "README.md"
keywords = ["2D", "game"]
license = "Apache-2.0"

[dependencies]
byteorder = "1.3.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gl = "0.14.0"
sdl2-sys = { version = "0.34.2", default-features = false, features = ["image", "mixer"] }
