[package]
name = "gate_build"
version = "0.6.3"
edition = "2018"
authors = ["Matthew Michelotti <matthew@matthewmichelotti.com>"]
description = "Build utilities for Gate, a specialized 2D game library"
documentation = "https://docs.rs/gate_build/"
repository = "https://github.com/SergiusIW/gate"
readme = "README.md"
keywords = ["2D", "game"]
license = "Apache-2.0"

[dependencies]
image = { version = "0.23.9", default-features = false, features = ["png"] }
byteorder = "1.3.4"
regex = "1.3.9"
lazy_static = "1.4.0"
